--- a/ts/packages/shell/src/renderer/chatView.html
+++ b/ts/packages/shell/src/renderer/chatView.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Active TypeAgent</title>
+    <title>Chat View</title>
     <link href="./assets/styles.less" type="text/css" rel="stylesheet" />
     <link
       href="./assets/settingsStyles.less"
@@ -25,6 +25,6 @@
   </head>
   <body>
     <script type="module" src="./src/main.ts"></script>
-    <div id="wrapper" class="wrapper"></div>
+    <div id="wrapper" class="wrapper write-only"></div>
   </body>
 </html>
