fixed layout / back button overlap

--- a/ts/packages/shell/src/renderer/viewHost.html
+++ b/ts/packages/shell/src/renderer/viewHost.html
@@ -72,6 +72,10 @@
         right: 0;
       }
 
+      body.vertical-layout .browser-nav {
+        margin-left: 30px;
+      }
+
       /* When in horizontal layout with chat sidebar, browser controls should be positioned over browser area */
       body.horizontal-layout.has-sidebar .title-bar {
         left: var(--sidebar-width, 400px);
@@ -161,7 +165,7 @@
       .browser-nav {
         display: flex;
         align-items: center;
-        gap: 1px;
+        gap: 1px;        
       }
 
       .nav-separator {
