updated chat history title

--- a/ts/packages/shell/src/renderer/readOnlyChatView.html
+++ b/ts/packages/shell/src/renderer/readOnlyChatView.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Active TypeAgent</title>
+    <title>Chat History</title>
     <link href="./assets/styles.less" type="text/css" rel="stylesheet" />
     <link
       href="./assets/settingsStyles.less"
