--- a/ts/packages/shell/src/renderer/readOnlyChatView.html
+++ b/ts/packages/shell/src/renderer/readOnlyChatView.html
@@ -23,88 +23,89 @@
       crossorigin="anonymous"
     />
   </head>
-  <body >
+  <body>
     <div id="wrapper" class="wrapper read-only"></div>
     <script type="text/javascript">
       function createWebSocket(autoReconnect = true) {
-          let url = window.location;
-          let protocol = url.protocol.toLowerCase() === "https:" ? "wss" : "ws";
-          let port = url.port ? `:${url.port}` : "";
+        let url = window.location;
+        let protocol = url.protocol.toLowerCase() === "https:" ? "wss" : "ws";
+        let port = url.port ? `:${url.port}` : "";
 
-          const endpoint = `${protocol}://${url.hostname}${port}`;
+        const endpoint = `${protocol}://${url.hostname}${port}`;
 
-          return new Promise((resolve) => {
-              console.log(`opening web socket to ${endpoint}`);
-              const webSocket = new WebSocket(endpoint);
+        return new Promise((resolve) => {
+          console.log(`opening web socket to ${endpoint}`);
+          const webSocket = new WebSocket(endpoint);
 
-              webSocket.onopen = (event) => {
-                  console.log("websocket open", event);
-                  resolve(webSocket);
-              };
+          webSocket.onopen = (event) => {
+            console.log("websocket open", event);
+            resolve(webSocket);
+          };
 
-              webSocket.onmessage = (event) => {
-                  console.log("websocket message:", JSON.stringify(event));
+          webSocket.onmessage = (event) => {
+            console.log("websocket message:", JSON.stringify(event));
 
-                  // messages are for updates to the chat message scroll window
-                  const scrollWrappers = document.getElementsByClassName('chat scroll_enabled');
-                //const wrapper = document.getElementById('wrapper');
-                if (scrollWrappers.length > 0) {
-                    scrollWrappers[0].innerHTML = event.data;
-                } else {
-                    const wrapper = document.getElementById('wrapper');
-                    if (wrapper) {
-                        wrapper.innerHTML = event.data;
-                    }
-                }
-              };
+            // messages are for updates to the chat message scroll window
+            const scrollWrappers = document.getElementsByClassName(
+              "chat scroll_enabled",
+            );
+            //const wrapper = document.getElementById('wrapper');
+            if (scrollWrappers.length > 0) {
+              scrollWrappers[0].innerHTML = event.data;
+            } else {
+              const wrapper = document.getElementById("wrapper");
+              if (wrapper) {
+                wrapper.innerHTML = event.data;
+              }
+            }
+          };
 
-              webSocket.onclose = (event) => {
-                  console.log("websocket connection closed", event);
+          webSocket.onclose = (event) => {
+            console.log("websocket connection closed", event);
 
-                  if (autoReconnect) {
-                      createWebSocket().then((ws) => {
-                          globalThis.ws = ws;
-                      });
-                  }
-              };
+            if (autoReconnect) {
+              createWebSocket().then((ws) => {
+                globalThis.ws = ws;
+              });
+            }
+          };
 
-              webSocket.onerror = (event) => {
-                  console.log("websocket error", event);
-                  resolve(undefined);
-              };
-          });
+          webSocket.onerror = (event) => {
+            console.log("websocket error", event);
+            resolve(undefined);
+          };
+        });
       }
 
       function keepWebSocketAlive(webSocket, source) {
-          const keepAliveIntervalId = setInterval(() => {
-              if (webSocket && webSocket.readyState === WebSocket.OPEN) {
-                  webSocket.send(
-                      JSON.stringify({
-                          source: source,
-                          target: "none",
-                          messageType: "keepAlive",
-                          body: {},
-                      })
-                  );
-              } else {
-                  console.log("Clearing keepalive retry interval");
-                  clearInterval(keepAliveIntervalId);
-              }
-          }, 20000);
-      }      
-    
-      createWebSocket(true).then((ws) => {
-          if (ws) {
-              globalThis.ws = ws;
-              keepWebSocketAlive(ws, "chatView");
+        const keepAliveIntervalId = setInterval(() => {
+          if (webSocket && webSocket.readyState === WebSocket.OPEN) {
+            webSocket.send(
+              JSON.stringify({
+                source: source,
+                target: "none",
+                messageType: "keepAlive",
+                body: {},
+              }),
+            );
           } else {
-              const wrapper = document.getElementById("wrapper");
-              if (wrapper) {
-                  wrapper.innerHTML = "Failed to connect to TypeAgent shell.";
-              }
+            console.log("Clearing keepalive retry interval");
+            clearInterval(keepAliveIntervalId);
           }
+        }, 20000);
+      }
+
+      createWebSocket(true).then((ws) => {
+        if (ws) {
+          globalThis.ws = ws;
+          keepWebSocketAlive(ws, "chatView");
+        } else {
+          const wrapper = document.getElementById("wrapper");
+          if (wrapper) {
+            wrapper.innerHTML = "Failed to connect to TypeAgent shell.";
+          }
+        }
       });
-    
     </script>
   </body>
 </html>
