removed write-only class

--- a/ts/packages/shell/src/renderer/chatView.html
+++ b/ts/packages/shell/src/renderer/chatView.html
@@ -25,6 +25,6 @@
   </head>
   <body>
     <script type="module" src="./src/main.ts"></script>
-    <div id="wrapper" class="wrapper write-only"></div>
+    <div id="wrapper" class="wrapper"></div>
   </body>
 </html>
