--- a/ts/packages/shell/src/renderer/viewHost.html
+++ b/ts/packages/shell/src/renderer/viewHost.html
@@ -180,6 +180,7 @@
         min-width: 0;
         padding: 0 8px;
         position: relative;
+        height: 100%;
       }
 
       /* Draggable regions based on mode */
