--- a/ts/packages/shell/src/renderer/viewHost.html
+++ b/ts/packages/shell/src/renderer/viewHost.html
@@ -11,11 +11,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link
-      href="./assets/viewHost.less"
-      type="text/css"
-      rel="stylesheet"
-    />    
+    <link href="./assets/viewHost.less" type="text/css" rel="stylesheet" />
   </head>
 
   <body>
