--- a/ts/examples/cacheRESTEndpoint/src/test.html
+++ b/ts/examples/cacheRESTEndpoint/src/test.html
@@ -1,3 +1,6 @@
+<!-- Copyright (c) Microsoft Corporation.
+ Licensed under the MIT License. -->
+ <!-- This file was created by AI -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
