removed commented out code, added back in card sample.
Lint

--- a/ts/packages/agents/settings/cards/AdjustMultiMonitorLayout.html
+++ b/ts/packages/agents/settings/cards/AdjustMultiMonitorLayout.html
@@ -1,3 +1,7 @@
+<!-- Copyright (c) Microsoft Corporation.
+ Licensed under the MIT License. -->
+<!-- This file was created by AI -->
+
 <!doctype html>
 <html lang="en">
   <head>
